# gtop

./: Dockerfile  Makefile  README.md  demo.py  docker_util.py  gpu.py  main.py  models.py  process.py  process_info.py  process_screen.py  pyproject.toml  system_info.py  triton_screen.py  triton_util.py  ui.py
.github/workflows/: publish.yml
