[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gtop"
version = "0.1.4"
description = "Real-time GPU monitoring and process management TUI for NVIDIA GPUs"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
authors = [
    {name = "Stephen Krol", email = "stephen@example.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Hardware",
    "Topic :: System :: Monitoring",
    "Topic :: Utilities",
]
keywords = ["gpu", "monitoring", "nvidia", "cuda", "tui", "terminal", "docker", "triton"]
dependencies = [
    "nvidia-ml-py>=13.590.48",            # NVIDIA NVML bindings
    "pydantic>=2.12.5",                   # data models
    "textual>=8.0.0",                     # TUI framework
    "psutil>=5.9.0",                      # process utilities
    "docker>=7.0.0",                      # Docker SDK for Python
    "tritonclient[http]>=2.30.0",         # Triton inference client
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "black>=22.0"]

[project.urls]
Homepage = "https://github.com/stivio00/gtop"
Repository = "https://github.com/stivio00/gtop.git"
Issues = "https://github.com/stivio00/gtop/issues"

[project.scripts]
gtop = "main:main"

[tool.hatch.build.targets.wheel]
# include root-level python modules since project is not a package directory
packages = []
include = ["*.py"]
